--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html>
-<head><title>Analyze</title>
+<head><title>Votar</title>
   <style>
+    body {
+      font-family: Helvetica;
+    }
     .negative {
       background: #ffa;
     }
   </style>
 </head>
 <body>
+
+<h1>Analyzing the 2016 Election by Equipment and Results</h1>
+<p><a href="https://github.com/kentbrew/votar/">About This Project</a></p>
 
 <select id="chooseState"></select>
 <table id="output" border="1" cellpadding="5" cellspacing="0"></table>
