--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <h1>Analyzing the 2016 Election by Equipment and Results</h1>
 <p><a href="https://github.com/kentbrew/votar/">About This Project</a></p>
 
-<select id="chooseState"></select>
+<p>State: <select id="chooseState"></select></p>
+
+<p>Careful, now: this data was captured from CNN before everything closed, so numbers are not final. See <a href="https://www.verifiedvoting.org/">Verified Voting</a> for more about equipment.</p>
+
 <table id="output" border="1" cellpadding="5" cellspacing="0"></table>
 
 <script>
