--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1>Analyzing the 2016 Election by Equipment and Results</h1>
 <p>Choose State: <select id="chooseState"></select></p>
 <p><a href="https://github.com/kentbrew/votar/">About This Project</a></p>
-<p>Careful, now: this data was captured from CNN before everything closed, so numbers are not final.</p>
+<p>Careful, now: the results data were captured from CNN before everything closed, so numbers won't agree with final tallies available elsewhere.</p>
 <p>See <a href="https://www.verifiedvoting.org/">Verified Voting</a> for more about what those equipment codes mean.  If you see "PB" it means "paper ballot."</p>
 
 <table id="output" border="1" cellpadding="5" cellspacing="0"></table>
