--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
 <h1>Analyzing the 2016 Election by Equipment and Results</h1>
+<p>Looking at candidates, results, and polling place equipment for each county in each state.</p>
 <p>Choose State: <select id="chooseState"></select></p>
 <p><a href="https://github.com/kentbrew/votar/">About This Project</a></p>
 <p>Careful, now: the results data were captured from CNN before everything closed, so numbers won't agree with final tallies available elsewhere.</p>
