--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
 <head><title>Votar: Analyzing the 2016 Election by Equipment and Results</title>
   <style>
@@ -8,6 +9,7 @@
       background: #ffa;
     }
   </style>
+  <meta property="og:description" content="Looking at candidates, results, and polling place equipment for each county in each state." />
 </head>
 <body>
 
